# jellywrap

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  relay-config.json
.github/workflows/: build-desktop.yml  ci.yml
apps/desktop/: build-dmg.sh  package.json
apps/desktop/src/: index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/migration-api/: Dockerfile  package.json  tsconfig.json
apps/migration-api/src/: db-queries.ts  db.ts  index.ts
apps/migration-api/src/routes/: cloud.ts  family.ts  invites.ts  migrations.ts  smart-library.ts  waitlist.ts  watch-together.ts
apps/migration-api/src/services/: duplicate-detector.ts  gap-finder.ts  jellyfin-client.ts  matcher.ts  plex-client.ts  subtitle-hunter.ts
apps/relay-agent/: Dockerfile  go.mod
apps/relay-agent/cmd/: main.go
apps/relay-agent/internal/api/: server.go
apps/relay-agent/internal/relay/: relay.go
apps/relay-agent/internal/tunnel/: wireguard.go
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/app/: copy-btn.tsx  globals.css  layout.tsx  page.tsx  platform-install.tsx  smart-library-types.ts  waitlist-form.tsx
apps/web/app/cloud/: page.tsx
apps/web/app/family/: page.tsx
apps/web/app/getting-started/: page.tsx
apps/web/app/media/: page.tsx
apps/web/app/migrate/: page.tsx
apps/web/app/watch/: page.tsx
(+24 files in other folders)
