[package]
name = "jellywrap"
version = "0.1.0"
description = "JellyWrap - Open-source Plex alternative"
authors = ["JellyWrap"]
edition = "2021"

[lib]
name = "jellywrap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
